--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,11 @@
         				<h2 class="mt-0">All Employee</h2>
                        
         			</div>
+                    <div class="col-md-6 col-12 col-lg-6">
+                        <form action="{% url 'employee_search' %}" method="get">
+                            <input type="search" name="search" id="search" placeholder="Search........" required>
+                        </form>
+        			</div>
                     
         		</div>
                 <div class="vendor-movement-tabs main-tabs">
