--- a/templates/employee_create.html
+++ b/templates/employee_create.html
@@ -33,18 +33,20 @@
 
         <hr>
         <h3>Family Detail</h3>
+
+        <input type="hidden" name="totalfamilymember" id="totalfamilymember" value="1"> 
         <div class="form-group">
             <label for="exampleInputEmail1">Family member Name:</label>
-            <input type="text" class="form-control" name="member0" placeholder="Enter salary">
+            <input type="text" class="form-control" name="member1" placeholder="Enter name">
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">Member Relation with Employee:</label>
-            <input type="text" class="form-control" name="memberrelation0" placeholder="Enter salary">
+            <input type="text" class="form-control" name="memberrelation1" placeholder="Enter relation">
         </div>
 
         <div class="form-group">
             <label for="exampleInputEmail1">Profession:</label>
-            <input type="text" class="form-control" name="profession0" placeholder="Enter salary">
+            <input type="text" class="form-control" name="profession1" placeholder="Enter profession">
         </div>
 
 
@@ -54,19 +56,20 @@
 
         <hr>
         <h3>Previous Organization:</h3>
+        <input type="hidden" name="totalorganization" id="totalorganization" value="1">
+      
         <div class="form-group">
             <label for="exampleInputEmail1">Organization Name:</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" name="Organizationname0" placeholder="Enter salary">
+            <input type="text" class="form-control" id="exampleInputEmail1" name="Organizationname1" placeholder="Enter organization name">
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">Description</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" name="Description0" aria-describedby="emailHelp" placeholder="Enter salary">
+            <input type="text" class="form-control" id="exampleInputEmail1" name="Description1" aria-describedby="emailHelp" placeholder="Enter description">
         </div>
 
         
 
 
-      <input type="hidden" name="totallength" id="totallength" value="1">
       <div id="test">
 
       </div>
@@ -120,12 +123,12 @@
             var i = 1;
             $("#add-more-family-memeber").click(function(e){
                 e.preventDefault();
-                    console.log('yes'+i)                
                     var AnswerHTML = "";
+                    i++;
+                    console.log('yes'+i)                
+
                     
-         
-                    
-                    AnswerHTML =' <hr><h3>Family Detail '+(i+1)+':</h3><div class="form-group">'
+                    AnswerHTML =' <hr><h3>Family Detail '+(i)+':</h3><div class="form-group">'
                   +' <div class="col-xs-4"> <label for="">Family member Name:</label><input type="text" class="form-control" name="member'+i+'" placeholder="Enter salary"></div>'
                   +' <div class="col-xs-4"> <label for="">realation with Employee:</label><input type="text" class="form-control" name="memberrelation'+i+'" placeholder="Enter relation"></div>'
                   +' <div class="col-xs-4"> <label for="">realation with Employee:</label><input type="text" class="form-control" name="profession'+i+'" placeholder="Enter profession"></div>'
@@ -133,8 +136,7 @@
                         
                     
                     $('#test').append(AnswerHTML);
-                    i++;
-                    $("#totallength").val(i);
+                    $("#totalfamilymember").val(i);
                                         
                     $('.remove-me').click(function(e){
                         e.preventDefault();
@@ -145,23 +147,24 @@
                     });
             });
 
-
+            
             var count = 1;
             $("#add-more-organization-name").click(function(e){
                 e.preventDefault();
                     var AnswerHTML = "";
                     
-         
+                    count++;
                     
-                    AnswerHTML =' <hr><h3>Previous Organization  '+(count+1)+':</h3><div class="form-group">'
+                    console.log(count)
+                    AnswerHTML =' <hr><h3>Previous Organization  '+(count)+':</h3><div class="form-group">'
                   +' <div class="col-xs-4"> <label for="">Organization name:</label><input type="text" class="form-control" name="Organizationname'+count+'" placeholder="Enter salary"></div>'
                   +' <div class="col-xs-4"> <label for="">Description:</label><input type="text" class="form-control" name="Description'+count+'" placeholder="Enter relation"></div>'
                   +'<i class="icon-trash remove-me" style="padding-left:20px;  cursor: pointer;"></i></div>';
                         
                     
                     $('#test').append(AnswerHTML);
-                    i++;
-                    $("#totallength").val(count);
+                    
+                    $("#totalorganization").val(count);
                                         
                     $('.remove-me').click(function(e){
                         e.preventDefault();
